--- a/FACTURACION/FACTURACION/FACTURACION.vbproj
+++ b/FACTURACION/FACTURACION/FACTURACION.vbproj
@@ -265,6 +265,12 @@
     <Compile Include="REMISIONES.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="REMISIONES_PENDIENTES.Designer.vb">
+      <DependentUpon>REMISIONES_PENDIENTES.vb</DependentUpon>
+    </Compile>
+    <Compile Include="REMISIONES_PENDIENTES.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="REPORT_REMISION.Designer.vb">
       <DependentUpon>REPORT_REMISION.vb</DependentUpon>
     </Compile>
@@ -340,6 +346,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="REMISIONES.resx">
       <DependentUpon>REMISIONES.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="REMISIONES_PENDIENTES.resx">
+      <DependentUpon>REMISIONES_PENDIENTES.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="REPORT_REMISION.resx">
       <DependentUpon>REPORT_REMISION.vb</DependentUpon>
